--- a/index.html
+++ b/index.html
@@ -10,6 +10,28 @@
 <body>
     <h1>5 Day Forcast</h1>
 
+    <div class="container">
+      <div class="input-group p-3 m-3">
+        <input
+          id="search-main"
+          type="search"
+          class="form-control rounded"
+          placeholder="Search for a place here!"
+          aria-label="Search"
+          aria-describedby="search-addon"
+        />
+        <button
+          id="search-main-btn"
+          type="button"
+          class="btn btn-outline-primary"
+        >
+          search
+        </button>
+      </div>
+    </div>
+
+
+
     <script src="./assets/script.js"></script>
 </body>
 </html>
