added api for weather and linked variables

--- a/index.html
+++ b/index.html
@@ -31,6 +31,10 @@
     </div>
 
 
+    <div class="container">
+      <div id="weatherInfo" class="d-none"></div>
+    </div>
+
 
     <script src="./assets/script.js"></script>
 </body>
