--- a/index.html
+++ b/index.html
@@ -34,6 +34,9 @@
           search
         </button>
       </div>
+      <div>
+        <p>This is where past search history will populate.</p>
+      </div>
     </section>
 
     <section class="container text-center col-9">
@@ -102,10 +105,6 @@
       </div>
     </div>
     </section>
-
-    <div class="container">
-      <div id="weatherInfo" class="d-none"></div>
-    </div>
     </div>
 </main>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
