--- a/index.html
+++ b/index.html
@@ -45,10 +45,10 @@
 
         <div class="row">
         <div class="card col">
-        <div class="card-header">
+        <div id="dayOneDate"class="card-header">
           Quote
         </div>
-        <div class="card-body">
+        <div id="dayOneWeather" class="card-body">
           <blockquote class="blockquote mb-0">
             <p>A well-known quote, contained in a blockquote element.</p>
             <footer class="blockquote-footer">Someone famous in <cite title="Source Title">Source Title</cite></footer>
@@ -57,10 +57,10 @@
       </div>
 
       <div class="card col">
-        <div class="card-header">
+        <div id="dayTwoDate" class="card-header">
           Quote
         </div>
-        <div class="card-body">
+        <div id="dayTwoWeather" class="card-body">
           <blockquote class="blockquote mb-0">
             <p>A well-known quote, contained in a blockquote element.</p>
             <footer class="blockquote-footer">Someone famous in <cite title="Source Title">Source Title</cite></footer>
@@ -69,10 +69,10 @@
       </div>
 
       <div class="card col">
-        <div class="card-header">
+        <div id="dayThreeDate" class="card-header">
           Quote
         </div>
-        <div class="card-body">
+        <div id="dayThreeWeather"class="card-body">
           <blockquote class="blockquote mb-0">
             <p>A well-known quote, contained in a blockquote element.</p>
             <footer class="blockquote-footer">Someone famous in <cite title="Source Title">Source Title</cite></footer>
@@ -81,10 +81,10 @@
       </div>
 
       <div class="card col">
-        <div class="card-header">
+        <div id="dayFourDate"class="card-header">
           Quote
         </div>
-        <div class="card-body">
+        <div id="dayFourWeather"class="card-body">
           <blockquote class="blockquote mb-0">
             <p>A well-known quote, contained in a blockquote element.</p>
             <footer class="blockquote-footer">Someone famous in <cite title="Source Title">Source Title</cite></footer>
@@ -93,10 +93,10 @@
       </div>
 
       <div class="card col">
-        <div class="card-header">
+        <div id="dayFiveDate" class="card-header">
           Quote
         </div>
-        <div class="card-body">
+        <div id="dayFiveWeather"class="card-body">
           <blockquote class="blockquote mb-0">
             <p>A well-known quote, contained in a blockquote element.</p>
             <footer class="blockquote-footer">Someone famous in <cite title="Source Title">Source Title</cite></footer>
