working on previous ssearch local storage funtion

--- a/index.html
+++ b/index.html
@@ -34,8 +34,7 @@
           search
         </button>
       </div>
-      <div>
-        <p>This is where past search history will populate.</p>
+      <div id="pastSearches">
       </div>
     </section>
 
